# movie_mosaic_maker

./: .gitignore  README.md  pyproject.toml
src/movie_mosaic_maker/: assignment.py  cache.py  cli.py  color.py  compositor.py  diagnostics.py  images.py  models.py  packing.py  sampling.py  target.py  video.py
tests/: conftest.py  test_assignment.py  test_cache.py  test_cli_smoke.py  test_color.py  test_compositor.py  test_diagnostics.py  test_images.py  test_package.py  test_packing.py  test_sampling.py  test_target.py  test_video.py
